--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,4 +5,8 @@
     <dimen name="login_button_vertical_margin">20dp</dimen>
     <dimen name="login_button_horizontal_margin">75dp</dimen>
     <dimen name="logo_w_h">150dp</dimen>
+    <dimen name="nav_header_vertical_spacing">8dp</dimen>
+    <dimen name="nav_header_height">176dp</dimen>
+    <dimen name="fab_margin">16dp</dimen>
+    <dimen name="marginLabelMain">15dp</dimen>
 </resources>
