--- a/app/src/main/res/layout/activity_main_page.xml
+++ b/app/src/main/res/layout/activity_main_page.xml
@@ -12,9 +12,7 @@
         android:layout_alignParentTop="true"
         android:background="@color/backgroundColor"
         android:gravity="center_horizontal"
-        android:orientation="vertical"
-        android:paddingBottom="@dimen/activity_vertical_margin"
-        android:paddingTop="@dimen/activity_vertical_margin">
+        android:orientation="vertical">
 
         <ScrollView
             android:id="@+id/login_form"
