--- a/app/src/main/res/layout/activity_main_page.xml
+++ b/app/src/main/res/layout/activity_main_page.xml
@@ -5,198 +5,192 @@
     android:layout_height="match_parent"
     tools:context=".EmailLoginActivity">
 
-    <LinearLayout
+
+    <ScrollView
+        android:id="@+id/login_form"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:layout_above="@id/footer"
         android:layout_alignParentTop="true"
-        android:background="@color/backgroundColor"
-        android:gravity="center_horizontal"
-        android:orientation="vertical">
+        android:background="@color/backgroundColor">
 
-        <ScrollView
-            android:id="@+id/login_form"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/activity_vertical_margin"
+            android:orientation="vertical">
+
+            <LinearLayout
+                android:id="@+id/ll_profile"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="20dp"
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:id="@+id/img_profile_pic"
+                    android:layout_width="110dp"
+                    android:layout_height="110dp"
+                    android:src="@drawable/treemoney" />
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
+                    android:layout_marginEnd="10dp"
+                    android:layout_marginStart="10dp"
+                    android:orientation="vertical">
+
+                    <TextView
+                        android:id="@+id/txt_name"
+                        style="@style/TextContent.LabelKoin"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:padding="5dp"
+                        android:text="Your Name"
+                        android:textAlignment="textStart"
+                        android:textColor="@android:color/black"
+                        android:textSize="20sp"
+                        android:textStyle="bold" />
+
+                    <TextView
+                        android:id="@+id/txt_email"
+                        style="@style/TextContent.LabelKoin"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:padding="5dp"
+                        android:text="Your Email"
+                        android:textAlignment="textStart"
+                        android:textColor="@android:color/black"
+                        android:textSize="18sp" />
+                </LinearLayout>
+
+            </LinearLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="20dp"
-                android:orientation="vertical">
-
-                <LinearLayout
-                    android:id="@+id/ll_profile"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="20dp"
-                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
-                    android:layout_marginRight="@dimen/activity_horizontal_margin"
-                    android:orientation="horizontal"
-                    android:weightSum="3">
-
-                    <ImageView
-                        android:id="@+id/img_profile_pic"
-                        android:layout_width="110dp"
-                        android:layout_height="110dp"
-                        android:src="@drawable/treemoney" />
-
-                    <LinearLayout
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center"
-                        android:layout_marginStart="10dp"
-                        android:layout_weight="2"
-                        android:orientation="vertical">
-
-                        <TextView
-                            android:id="@+id/txt_name"
-                            style="@style/TextContent.LabelKoin"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:padding="5dp"
-                            android:text="Your Name"
-                            android:textColor="@android:color/black"
-                            android:textSize="20sp"
-                            android:textStyle="bold" />
-
-                        <TextView
-                            android:id="@+id/txt_email"
-                            style="@style/TextContent.LabelKoin"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:padding="5dp"
-                            android:text="Your Email"
-                            android:textColor="@android:color/black"
-                            android:textSize="18sp" />
-                    </LinearLayout>
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/marginLabelMain"
-                    android:orientation="horizontal">
-
-                    <Button
-                        android:id="@+id/btn_koin_putih"
-                        style="@style/TextContent.BtnKoin"
-                        android:layout_width="0dp"
-                        android:layout_height="50dp"
-                        android:layout_weight="1"
-                        android:text="@string/koin_putih_label"
-                        android:textAlignment="center"
-                        android:textAllCaps="false"
-                        android:theme="@style/PrimaryButton" />
-
-                    <TextView
-                        android:id="@+id/jml_koin_putih"
-                        style="@style/TextContent.LabelKoin"
-                        android:layout_width="0dp"
-                        android:layout_height="50dp"
-                        android:layout_weight="1"
-                        android:text="12,549 Koin"
-                        android:textAlignment="center" />
-
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/marginLabelMain"
-                    android:orientation="horizontal">
-
-                    <Button
-                        android:id="@+id/btn_koin_hijau"
-                        style="@style/TextContent.BtnKoin"
-                        android:layout_width="0dp"
-                        android:layout_height="50dp"
-                        android:layout_weight="1"
-                        android:text="@string/koin_hijau_label"
-                        android:textAlignment="center"
-                        android:theme="@style/PrimaryButton" />
-
-                    <TextView
-                        android:id="@+id/jml_koin_hijau"
-                        style="@style/TextContent.LabelKoin"
-                        android:layout_width="0dp"
-                        android:layout_height="50dp"
-                        android:layout_weight="1"
-
-                        android:text="@string/not_available"
-                        android:textAlignment="center" />
-
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/marginLabelMain"
-                    android:orientation="horizontal">
-
-                    <Button
-                        android:id="@+id/btn_koin_merah"
-                        style="@style/TextContent.BtnKoin"
-                        android:layout_width="0dp"
-                        android:layout_height="50dp"
-                        android:layout_weight="1"
-                        android:text="@string/koin_merah_label"
-                        android:textAlignment="center"
-                        android:theme="@style/PrimaryButton" />
-
-                    <TextView
-                        android:id="@+id/jml_koin_merah"
-                        style="@style/TextContent.LabelKoin"
-                        android:layout_width="0dp"
-                        android:layout_height="50dp"
-                        android:layout_weight="1"
-                        android:text="@string/not_available"
-                        android:textAlignment="center" />
-
-                </LinearLayout>
+                android:layout_marginTop="@dimen/marginLabelMain"
+                android:orientation="horizontal">
 
                 <Button
-                    android:id="@+id/btn_merchant_login"
+                    android:id="@+id/btn_koin_putih"
                     style="@style/TextContent.BtnKoin"
-                    android:layout_width="match_parent"
-                    android:layout_height="70dp"
-                    android:layout_marginTop="30dp"
-                    android:gravity="center"
-                    android:text="@string/merchant_login_button"
+                    android:layout_width="0dp"
+                    android:layout_height="50dp"
+                    android:layout_weight="1"
+                    android:text="@string/koin_putih_label"
+                    android:textAlignment="center"
+                    android:textAllCaps="false"
                     android:theme="@style/PrimaryButton" />
 
-                <LinearLayout
-                    android:id="@+id/menu_button"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginBottom="20dp"
-                    android:layout_marginTop="@dimen/marginLabelMain"
-                    android:gravity="center"
-                    android:orientation="horizontal">
+                <TextView
+                    android:id="@+id/jml_koin_putih"
+                    style="@style/TextContent.LabelKoin"
+                    android:layout_width="0dp"
+                    android:layout_height="50dp"
+                    android:layout_weight="1"
+                    android:text="12,549 Koin"
+                    android:textAlignment="center" />
 
-                    <Button
-                        android:id="@+id/btn_bulletin"
-                        style="@style/TextContent.BtnKoin"
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:text="@string/bulletin_label_button"
-                        android:theme="@style/PrimaryButton" />
-
-                    <Button
-                        android:id="@+id/btn_setting"
-                        style="@style/TextContent.BtnKoin"
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:text="@string/settings_label_button"
-                        android:theme="@style/PrimaryButton" />
-
-                </LinearLayout>
             </LinearLayout>
 
-        </ScrollView>
-    </LinearLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/marginLabelMain"
+                android:orientation="horizontal">
+
+                <Button
+                    android:id="@+id/btn_koin_hijau"
+                    style="@style/TextContent.BtnKoin"
+                    android:layout_width="0dp"
+                    android:layout_height="50dp"
+                    android:layout_weight="1"
+                    android:text="@string/koin_hijau_label"
+                    android:textAlignment="center"
+                    android:theme="@style/PrimaryButton" />
+
+                <TextView
+                    android:id="@+id/jml_koin_hijau"
+                    style="@style/TextContent.LabelKoin"
+                    android:layout_width="0dp"
+                    android:layout_height="50dp"
+                    android:layout_weight="1"
+
+                    android:text="@string/not_available"
+                    android:textAlignment="center" />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/marginLabelMain"
+                android:orientation="horizontal">
+
+                <Button
+                    android:id="@+id/btn_koin_merah"
+                    style="@style/TextContent.BtnKoin"
+                    android:layout_width="0dp"
+                    android:layout_height="50dp"
+                    android:layout_weight="1"
+                    android:text="@string/koin_merah_label"
+                    android:textAlignment="center"
+                    android:theme="@style/PrimaryButton" />
+
+                <TextView
+                    android:id="@+id/jml_koin_merah"
+                    style="@style/TextContent.LabelKoin"
+                    android:layout_width="0dp"
+                    android:layout_height="50dp"
+                    android:layout_weight="1"
+                    android:text="@string/not_available"
+                    android:textAlignment="center" />
+
+            </LinearLayout>
+
+            <Button
+                android:id="@+id/btn_merchant_login"
+                style="@style/TextContent.BtnKoin"
+                android:layout_width="match_parent"
+                android:layout_height="70dp"
+                android:layout_marginTop="30dp"
+                android:gravity="center"
+                android:text="@string/merchant_login_button"
+                android:theme="@style/PrimaryButton" />
+
+            <LinearLayout
+                android:id="@+id/menu_button"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="20dp"
+                android:layout_marginTop="@dimen/marginLabelMain"
+                android:gravity="center"
+                android:orientation="horizontal">
+
+                <Button
+                    android:id="@+id/btn_bulletin"
+                    style="@style/TextContent.BtnKoin"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="@string/bulletin_label_button"
+                    android:theme="@style/PrimaryButton" />
+
+                <Button
+                    android:id="@+id/btn_setting"
+                    style="@style/TextContent.BtnKoin"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="@string/settings_label_button"
+                    android:theme="@style/PrimaryButton" />
+
+            </LinearLayout>
+        </LinearLayout>
+
+    </ScrollView>
 
 
     <LinearLayout
