--- a/app/src/main/res/layout/content_navigation.xml
+++ b/app/src/main/res/layout/content_navigation.xml
@@ -9,7 +9,6 @@
     tools:showIn="@layout/app_bar_navigation">
 
 
-
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
@@ -17,7 +16,6 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/activity_vertical_margin"
             android:orientation="vertical">
 
             <FrameLayout
@@ -25,21 +23,24 @@
                 android:layout_height="205dp"
                 android:orientation="horizontal">
 
-                <android.support.v4.view.ViewPager
-                    android:id="@+id/slide_promotion"
-                    android:layout_width="match_parent"
-                    android:layout_height="180dp"/>
+                <RelativeLayout
+                    android:layout_width="fill_parent"
+                    android:layout_height="wrap_content">
 
-                <LinearLayout
-                    android:id="@+id/sliderdots"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_horizontal|bottom"
-                    android:layout_marginBottom="5dp"
-                    android:gravity="center_horizontal"
-                    android:orientation="horizontal">
+                    <android.support.v4.view.ViewPager
+                        android:id="@+id/pager"
+                        android:layout_width="fill_parent"
+                        android:layout_height="fill_parent"
+                        android:layout_alignParentTop="true" />
 
-                </LinearLayout>
+                    <me.relex.circleindicator.CircleIndicator
+                        android:id="@+id/indicator"
+                        android:layout_width="match_parent"
+                        android:layout_height="30dp"
+                        android:layout_alignParentBottom="true" />
+                </RelativeLayout>
+
+
             </FrameLayout>
 
 
