--- a/app/src/main/res/layout/sliding.xml
+++ b/app/src/main/res/layout/sliding.xml
@@ -5,10 +5,12 @@
     android:layout_height="match_parent">
 
     <ImageView
-        android:id="@+id/gambar_penginapan"
+        android:id="@+id/image"
         android:layout_width="match_parent"
         android:layout_height="205dp"
         android:scaleType="centerCrop"
-        app:srcCompat="@mipmap/ic_launcher" />
+        android:src="@drawable/cointree1"
+        android:adjustViewBounds="true"
+        />
 
 </LinearLayout>
